--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,12 @@
 }
 
 .fundo {
+    background-image: linear-gradient(45deg, black, crimson);
+    height: 100%;
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.calculadora {
     
 }
