--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,22 @@
 
 .fundo {
     background-image: linear-gradient(45deg, black, crimson);
-    height: 100%;
+    height: 100vh;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .calculadora {
-    
+    padding: 15px;
+    position: absolute;
+    background-color: black;
+    border-radius: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.botao {
+    width: 50px;
+    height: 50px;
 }
