--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,21 @@
 .botao {
     width: 50px;
     height: 50px;
+    font-size: 25px;
+    cursor: pointer;
+    border: none;
+    border-radius: 24%;
+}
+
+.botao:hover {
+    background-color: rgb(31, 31, 31);
+    color: #fff;
+}
+
+.igual {
+    height: 106px;
+}
+
+.zero {
+    height: 106px;
 }
