--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
 .botao {
     width: 50px;
     height: 50px;
+    margin: 2px;
     font-size: 25px;
     cursor: pointer;
     border: none;
@@ -39,5 +40,5 @@
 }
 
 .zero {
-    height: 106px;
+    width: 106px;
 }
