--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,13 @@
     height: 100vh;
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
 
 .calculadora {
     padding: 15px;
     position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
     background-color: black;
     border-radius: 15px;
     top: 50%;
